{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 58,
  "lineage": "c8d6571d-0c30-d0ef-d6b6-b175a1ab09a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:security-group/sg-08a379d89800d80d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08a379d89800d80d9",
            "ingress": [],
            "name": "all_worker_management20250417131128394400000006",
            "name_prefix": "all_worker_management",
            "owner_id": "500662818810",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-547920213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08a379d89800d80d9",
            "security_group_rule_id": "sgr-05f3f6731fa31f3df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-921279994",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08a379d89800d80d9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:security-group/sg-0b67d917b61668b52",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b67d917b61668b52",
            "ingress": [],
            "name": "globant-project-cluster-20250417131128332400000004",
            "name_prefix": "globant-project-cluster-",
            "owner_id": "500662818810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globant-project-cluster",
              "cluster": "Globant"
            },
            "tags_all": {
              "Name": "globant-project-cluster",
              "cluster": "Globant"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:security-group/sg-0a6a4166ba09daf12",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a6a4166ba09daf12",
            "ingress": [],
            "name": "globant-project-node-20250417131130953700000008",
            "name_prefix": "globant-project-node-",
            "owner_id": "500662818810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globant-project-node",
              "cluster": "Globant",
              "kubernetes.io/cluster/globant-project": "owned"
            },
            "tags_all": {
              "Name": "globant-project-node",
              "cluster": "Globant",
              "kubernetes.io/cluster/globant-project": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1048760995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b67d917b61668b52",
            "security_group_rule_id": "sgr-0cca922858e14668d",
            "self": false,
            "source_security_group_id": "sg-0a6a4166ba09daf12",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-893685753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0669c8cfac463c181",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-271130394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0bdbc64929914abde",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1059114339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0322f0d0b9a606b49",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-161305867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-067e229db21add28b",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-448882988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0d7387e7594ec7d33",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2120243937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-035faedeb4e7b1843",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2022835616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-05a78b0d09f796fe5",
            "self": false,
            "source_security_group_id": "sg-0b67d917b61668b52",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-890082868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0bf6ed0dc608b88ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-514970206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0d67d018a3dd5baf1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1158778447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a6a4166ba09daf12",
            "security_group_rule_id": "sgr-0dcb67ae1ae475a7b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:network-acl/acl-025a881bb447a7490",
            "default_network_acl_id": "acl-025a881bb447a7490",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-025a881bb447a7490",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "500662818810",
            "subnet_ids": [
              "subnet-011bf11c29fa16617",
              "subnet-028181d99c21710cb",
              "subnet-02e319a94dd6ae610",
              "subnet-081e912623e20ad62"
            ],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:route-table/rtb-0d109a930f190e030",
            "default_route_table_id": "rtb-0d109a930f190e030",
            "id": "rtb-0d109a930f190e030",
            "owner_id": "500662818810",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:security-group/sg-0776900cfb50d199e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0776900cfb50d199e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "500662818810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f23b74432d09ba",
            "arn": "arn:aws:ec2:us-west-1:500662818810:elastic-ip/eipalloc-090f23b74432d09ba",
            "domain": "vpc",
            "id": "eipalloc-090f23b74432d09ba",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-8-48-206.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.48.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:internet-gateway/igw-0c2a0395ea2c563c7",
            "id": "igw-0c2a0395ea2c563c7",
            "owner_id": "500662818810",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f23b74432d09ba",
            "association_id": "eipassoc-00ca16dae627a3098",
            "connectivity_type": "public",
            "id": "nat-0273c7e9ccbbaa87e",
            "network_interface_id": "eni-03de015022150aa49",
            "private_ip": "10.0.4.35",
            "public_ip": "52.8.48.206",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028181d99c21710cb",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085458d89619348fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0273c7e9ccbbaa87e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085458d89619348fe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2a0395ea2c563c7",
            "id": "r-rtb-0223215681a77a5601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0223215681a77a560",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:route-table/rtb-085458d89619348fe",
            "id": "rtb-085458d89619348fe",
            "owner_id": "500662818810",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:route-table/rtb-0223215681a77a560",
            "id": "rtb-0223215681a77a560",
            "owner_id": "500662818810",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08714d3291c8be9f5",
            "route_table_id": "rtb-085458d89619348fe",
            "subnet_id": "subnet-011bf11c29fa16617"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7cec82bd69acbae",
            "route_table_id": "rtb-085458d89619348fe",
            "subnet_id": "subnet-081e912623e20ad62"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0282d2a5641333b0f",
            "route_table_id": "rtb-0223215681a77a560",
            "subnet_id": "subnet-028181d99c21710cb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ce3b5f856adf87",
            "route_table_id": "rtb-0223215681a77a560",
            "subnet_id": "subnet-02e319a94dd6ae610"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:subnet/subnet-011bf11c29fa16617",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011bf11c29fa16617",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500662818810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:subnet/subnet-081e912623e20ad62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e912623e20ad62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500662818810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:subnet/subnet-028181d99c21710cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028181d99c21710cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500662818810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:subnet/subnet-02e319a94dd6ae610",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e319a94dd6ae610",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500662818810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/globant-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a054c9f3c1eca2a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:500662818810:vpc/vpc-0a054c9f3c1eca2a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025a881bb447a7490",
            "default_route_table_id": "rtb-0d109a930f190e030",
            "default_security_group_id": "sg-0776900cfb50d199e",
            "dhcp_options_id": "dopt-047a79262a78db74b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a054c9f3c1eca2a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d109a930f190e030",
            "owner_id": "500662818810",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/globant-project": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/globant-project": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}